[gd_scene load_steps=7 format=2]

[ext_resource path="res://tom/tom.png" type="Texture" id=1]
[ext_resource path="res://Intro.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "Idle"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 3 ]
}

[sub_resource type="Animation" id=2]
resource_name = "StartWave"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Waving"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Intro"
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath("Control/Label:visible_characters")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0, 0, 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control/Label2:visible_characters")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3.5, 4.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0, 0, 17 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Control/Label3:visible_characters")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 5, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0, 0, 17 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Control/Label4:visible_characters")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 6.9, 7.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0, 0, 37 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Control/Label5:visible_characters")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 8, 8.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0, 0, 24 ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 2.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "start_wave"
} ]
}

[node name="Intro" type="Node2D"]
script = ExtResource( 2 )

[node name="Backdrop" type="Polygon2D" parent="."]
color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )
polygon = PoolVector2Array( -8, -8, -8, 312, 520, 312, 520, -8 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control"]
margin_left = 296.0
margin_top = 24.0
margin_right = 369.0
margin_bottom = 38.0
text = "This is Tom"
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Control"]
margin_left = 296.0
margin_top = 64.0
margin_right = 428.0
margin_bottom = 78.0
text = "Tom can't be trusted"
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Control"]
margin_left = 296.0
margin_top = 104.0
margin_right = 428.0
margin_bottom = 118.0
text = "He has many brothers"
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="Control"]
margin_left = 296.0
margin_top = 144.0
margin_right = 437.0
margin_bottom = 158.0
text = "They always get themselves into 
trouble"
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="Control"]
margin_left = 296.0
margin_top = 208.0
margin_right = 508.0
margin_bottom = 239.0
text = "Will you help keep them safe?"
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 112, 144 )
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )
hframes = 21
frame = 9

[node name="SpriteAniation" type="AnimationPlayer" parent="Sprite"]
anims/Idle = SubResource( 1 )
anims/StartWave = SubResource( 2 )
anims/Waving = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Intro"
anims/Intro = SubResource( 4 )
[connection signal="animation_finished" from="Sprite/SpriteAniation" to="." method="_on_SpriteAniation_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
